# board2note

./: .gitignore  README.md  pyproject.toml
board2note/: __init__.py  __main__.py  classify.py  encode.py  extract.py  localize.py  pipeline.py
tests/: conftest.py  test_classify.py  test_encode.py  test_pipeline.py
