[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "board2note"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
onnx = ["onnxruntime>=1.16"]

[project.scripts]
board2note = "board2note.__main__:main"
